--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ main {
 
 .text-container p {
   font-size: 18px;
+  padding-right: 200px;
   font-weight: 400;
   transform: translateY(-40px);
 }
@@ -94,7 +95,7 @@ footer {
 .social-media {
   display: flex;
   justify-content: flex-end;
-  margin: 0 40px;
+  margin: 30px 80px;
 }
 
 
@@ -159,6 +160,7 @@ footer {
 
     .text-container p{
         font-size: 14px;
+        padding: 0;
     }
 
     .text-container button{
